--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "@material-ui/core": "3.9.3",
+    "@material-ui/icons": "3.0.2",
+    "react-router-dom": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
