--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react-scripts": "3.0.0",
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
-    "react-router-dom": "5.0.0"
+    "react-router-dom": "5.0.0",
+    "redux":"4.0.1",
+    "react-redux": "7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
